fixed letter-spacing for banner title

--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -20,6 +20,7 @@ header.masthead {
         margin-top: 0;
         margin-bottom: 0;
         text-transform: uppercase;
+        letter-spacing: 0.3rem;
       }
       hr {
         margin: 30px auto;
